--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="/portfolio/favicon.ico">
-    <title>portfolio-front</title>
-  <script defer src="/portfolio/js/chunk-vendors.js"></script><script defer src="/portfolio/js/app.js"></script></head>
-  <body>
-    <noscript>
-      <strong>We're sorry but portfolio-front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>portfolio-front</title><script defer="defer" src="/js/chunk-vendors.f75d2030.js"></script><script defer="defer" src="/js/app.b42d86bc.js"></script><link href="/css/chunk-vendors.610b465e.css" rel="stylesheet"><link href="/css/app.fc1bac7d.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but portfolio-front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
